--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
 /* External CSS Test */
 #external-style-test {
-	background-color:rgb(240, 240, 240);
+	background-color:rgba(204, 255, 255, 1);
 }
